--- a/src/main/webapp/resources/css/text_box.css
+++ b/src/main/webapp/resources/css/text_box.css
@@ -12,7 +12,7 @@
     margin: 0;
     padding: 3px 6px;
 }
-.container2 p:nth-child(odd) {
+.container2 h4:nth-child(odd) {
     background: #333;
 }
 .container2 {
